update 22042024 fixed scrollbar 1200px board

--- a/assets/src/board/board.css
+++ b/assets/src/board/board.css
@@ -215,7 +215,7 @@
   }
 
   .content-section {
-    width: 100%;
+    width: calc(100vh - 232px);
   }
   .content {
     padding: 0 16px;
@@ -262,6 +262,7 @@
   .content-section {
     flex: none;
     height: calc(100vh - 80px);
+    width: 100%;
   }
   .header_board {
     padding: 24px 0 0 0;
